Static create/update