@@ -29,6 +29,8 @@ import java.util.List;
 
 import com.jayway.jsonpath.JsonPath;
 import org.eclipse.hawkbit.mgmt.rest.api.MgmtRestConstants;
+import org.eclipse.hawkbit.repository.SoftwareModuleManagement;
+import org.eclipse.hawkbit.repository.SoftwareModuleTypeManagement;
 import org.eclipse.hawkbit.repository.model.NamedEntity;
 import org.eclipse.hawkbit.repository.model.SoftwareModuleType;
 import org.eclipse.hawkbit.repository.test.util.WithUser;
@@ -101,7 +103,8 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
     public void getSoftwareModuleTypesWithParameters() throws Exception {
         final SoftwareModuleType testType = testdataFactory.findOrCreateSoftwareModuleType("test123");
         softwareModuleTypeManagement
-                .update(entityFactory.softwareModuleType().update(testType.getId()).description("Desc1234").colour("rgb(106,178,83)"));
+                .update(SoftwareModuleTypeManagement.Update.builder().id(testType.getId()).description("Desc1234").colour("rgb(106,178,83)")
+                        .build());
 
         mvc.perform(get(MgmtRestConstants.SOFTWAREMODULETYPE_V1_REQUEST_MAPPING + "?limit=10&sort=name:ASC&offset=0&q=name==a")
                         .accept(MediaType.APPLICATION_JSON))
@@ -160,19 +163,18 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
     @WithUser(principal = "uploadTester", allSpPermissions = true)
     public void createSoftwareModuleTypesInvalidAssignmentBadRequest() throws Exception {
 
-        final List<SoftwareModuleType> types = new ArrayList<>();
-        types.add(entityFactory.softwareModuleType().create().key("test-1").name("TestName-1").maxAssignments(-1)
-                .build());
+        final List<SoftwareModuleTypeManagement.Create> types = new ArrayList<>();
+        types.add(SoftwareModuleTypeManagement.Create.builder().key("test-1").name("TestName-1").maxAssignments(-1).build());
 
-        mvc.perform(post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypes(types))
+        mvc.perform(post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypeCreates(types))
                         .contentType(MediaType.APPLICATION_JSON).accept(MediaType.APPLICATION_JSON))
                 .andDo(MockMvcResultPrinter.print())
                 .andExpect(status().isBadRequest());
 
         types.clear();
-        types.add(entityFactory.softwareModuleType().create().key("test0").name("TestName0").maxAssignments(0).build());
+        types.add(SoftwareModuleTypeManagement.Create.builder().key("test0").name("TestName0").maxAssignments(0).build());
 
-        mvc.perform(post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypes(types))
+        mvc.perform(post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypeCreates(types))
                         .contentType(MediaType.APPLICATION_JSON).accept(MediaType.APPLICATION_JSON))
                 .andDo(MockMvcResultPrinter.print())
                 .andExpect(status().isBadRequest());
@@ -185,16 +187,16 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
     @WithUser(principal = "uploadTester", allSpPermissions = true)
     public void createSoftwareModuleTypes() throws Exception {
 
-        final List<SoftwareModuleType> types = Arrays.asList(
-                entityFactory.softwareModuleType().create().key("test1").name("TestName1").description("Desc1")
+        final List<SoftwareModuleTypeManagement.Create> types = Arrays.asList(
+                SoftwareModuleTypeManagement.Create.builder().key("test1").name("TestName1").description("Desc1")
                         .colour("col1‚").maxAssignments(1).build(),
-                entityFactory.softwareModuleType().create().key("test2").name("TestName2").description("Desc2")
+                SoftwareModuleTypeManagement.Create.builder().key("test2").name("TestName2").description("Desc2")
                         .colour("col2‚").maxAssignments(2).build(),
-                entityFactory.softwareModuleType().create().key("test3").name("TestName3").description("Desc3")
+                SoftwareModuleTypeManagement.Create.builder().key("test3").name("TestName3").description("Desc3")
                         .colour("col3‚").maxAssignments(3).build());
 
         final MvcResult mvcResult = mvc
-                .perform(post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypes(types))
+                .perform(post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypeCreates(types))
                         .contentType(MediaType.APPLICATION_JSON).accept(MediaType.APPLICATION_JSON))
                 .andDo(MockMvcResultPrinter.print())
                 .andExpect(status().isCreated())
@@ -223,9 +225,9 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
 
         assertThat((Object) JsonPath.compile("[0]_links.self.href").read(mvcResult.getResponse().getContentAsString()))
                 .hasToString("http://localhost/rest/v1/softwaremoduletypes/" + created1.getId());
-        assertThat((Object)JsonPath.compile("[1]_links.self.href").read(mvcResult.getResponse().getContentAsString()))
+        assertThat((Object) JsonPath.compile("[1]_links.self.href").read(mvcResult.getResponse().getContentAsString()))
                 .hasToString("http://localhost/rest/v1/softwaremoduletypes/" + created2.getId());
-        assertThat((Object)JsonPath.compile("[2]_links.self.href").read(mvcResult.getResponse().getContentAsString()))
+        assertThat((Object) JsonPath.compile("[2]_links.self.href").read(mvcResult.getResponse().getContentAsString()))
                 .hasToString("http://localhost/rest/v1/softwaremoduletypes/" + created3.getId());
 
         assertThat(softwareModuleTypeManagement.count()).isEqualTo(6);
@@ -275,7 +277,7 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
      * Ensures that module type deletion request to API on an entity that does not exist results in NOT_FOUND.
      */
     @Test
-     void deleteSoftwareModuleTypeThatDoesNotExistLeadsToNotFound() throws Exception {
+    void deleteSoftwareModuleTypeThatDoesNotExistLeadsToNotFound() throws Exception {
         mvc.perform(delete("/rest/v1/softwaremoduletypes/1234"))
                 .andDo(MockMvcResultPrinter.print())
                 .andExpect(status().isNotFound());
@@ -289,7 +291,7 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
     public void deleteSoftwareModuleTypeUsed() throws Exception {
         final SoftwareModuleType testType = createTestType();
         softwareModuleManagement
-                .create(entityFactory.softwareModule().create().type(testType).name("name").version("version"));
+                .create(SoftwareModuleManagement.Create.builder().type(testType).name("name").version("version").build());
 
         assertThat(softwareModuleTypeManagement.count()).isEqualTo(4);
 
@@ -314,7 +316,7 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
      * Checks the correct behaviour of /rest/v1/softwaremoduletypes/{ID} PUT requests.
      */
     @Test
-     void updateSoftwareModuleTypeColourDescriptionAndNameUntouched() throws Exception {
+    void updateSoftwareModuleTypeColourDescriptionAndNameUntouched() throws Exception {
         final SoftwareModuleType testType = createTestType();
 
         final String body = new JSONObject().put("id", testType.getId()).put("description", "foobardesc")
@@ -336,7 +338,7 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
      * Tests the update of the deletion flag. It is verfied that the software module type can't be marked as deleted through update operation.
      */
     @Test
-     void updateSoftwareModuleTypeDeletedFlag() throws Exception {
+    void updateSoftwareModuleTypeDeletedFlag() throws Exception {
         SoftwareModuleType testType = createTestType();
 
         final String body = new JSONObject().put("id", testType.getId()).put("deleted", true).toString();
@@ -358,7 +360,7 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
      * Checks the correct behaviour of /rest/v1/softwaremoduletypes GET requests with paging.
      */
     @Test
-     void getSoftwareModuleTypesWithoutAddtionalRequestParameters() throws Exception {
+    void getSoftwareModuleTypesWithoutAddtionalRequestParameters() throws Exception {
         final int types = 3;
         mvc.perform(get(MgmtRestConstants.SOFTWAREMODULETYPE_V1_REQUEST_MAPPING))
                 .andDo(MockMvcResultPrinter.print())
@@ -372,7 +374,7 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
      * Checks the correct behaviour of /rest/v1/softwaremoduletypes GET requests with paging.
      */
     @Test
-     void getSoftwareModuleTypesWithPagingLimitRequestParameter() throws Exception {
+    void getSoftwareModuleTypesWithPagingLimitRequestParameter() throws Exception {
         final int types = 3;
         final int limitSize = 1;
         mvc.perform(get(MgmtRestConstants.SOFTWAREMODULETYPE_V1_REQUEST_MAPPING)
@@ -388,7 +390,7 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
      * Checks the correct behaviour of /rest/v1/softwaremoduletypes GET requests with paging.
      */
     @Test
-     void getSoftwareModuleTypesWithPagingLimitAndOffsetRequestParameter() throws Exception {
+    void getSoftwareModuleTypesWithPagingLimitAndOffsetRequestParameter() throws Exception {
         final int types = 3;
         final int offsetParam = 2;
         final int expectedSize = types - offsetParam;
@@ -406,10 +408,13 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
      * Ensures that the server is behaving as expected on invalid requests (wrong media type, wrong ID etc.).
      */
     @Test
-     void invalidRequestsOnSoftwaremoduleTypesResource() throws Exception {
+    void invalidRequestsOnSoftwaremoduleTypesResource() throws Exception {
         final SoftwareModuleType testType = createTestType();
 
-        final List<SoftwareModuleType> types = Collections.singletonList(testType);
+        final List<SoftwareModuleTypeManagement.Create> types = List.of(SoftwareModuleTypeManagement.Create.builder()
+                .key(testType.getKey())
+                .name(testType.getName())
+                .build());
 
         // SM does not exist
         mvc.perform(get("/rest/v1/softwaremoduletypes/12345678"))
@@ -437,18 +442,18 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
                 .andDo(MockMvcResultPrinter.print())
                 .andExpect(status().isBadRequest());
 
-        final SoftwareModuleType toLongName = entityFactory.softwareModuleType().create()
+        final SoftwareModuleTypeManagement.Create toLongName = SoftwareModuleTypeManagement.Create.builder()
                 .key("test123")
                 .name(randomString(NamedEntity.NAME_MAX_SIZE + 1))
                 .build();
         mvc.perform(
-                        post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypes(Collections.singletonList(toLongName)))
+                        post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypeCreates(Collections.singletonList(toLongName)))
                                 .contentType(MediaType.APPLICATION_JSON))
                 .andDo(MockMvcResultPrinter.print())
                 .andExpect(status().isBadRequest());
 
         // unsupported media type
-        mvc.perform(post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypes(types))
+        mvc.perform(post("/rest/v1/softwaremoduletypes").content(JsonBuilder.softwareModuleTypeCreates(types))
                         .contentType(MediaType.APPLICATION_OCTET_STREAM))
                 .andDo(MockMvcResultPrinter.print())
                 .andExpect(status().isUnsupportedMediaType());
@@ -468,11 +473,11 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
      * Search erquest of software module types.
      */
     @Test
-     void searchSoftwareModuleTypeRsql() throws Exception {
-        softwareModuleTypeManagement.create(entityFactory.softwareModuleType().create().key("test123")
-                .name("TestName123").description("Desc123").maxAssignments(5));
-        softwareModuleTypeManagement.create(entityFactory.softwareModuleType().create().key("test1234")
-                .name("TestName1234").description("Desc1234").maxAssignments(5));
+    void searchSoftwareModuleTypeRsql() throws Exception {
+        softwareModuleTypeManagement.create(SoftwareModuleTypeManagement.Create.builder().key("test123")
+                .name("TestName123").description("Desc123").maxAssignments(5).build());
+        softwareModuleTypeManagement.create(SoftwareModuleTypeManagement.Create.builder().key("test1234")
+                .name("TestName1234").description("Desc1234").maxAssignments(5).build());
 
         final String rsqlFindLikeDs1OrDs2 = "name==TestName123,name==TestName1234";
 
@@ -487,10 +492,9 @@ public class MgmtSoftwareModuleTypeResourceTest extends AbstractManagementApiInt
     }
 
     private SoftwareModuleType createTestType() {
-        SoftwareModuleType testType = softwareModuleTypeManagement.create(entityFactory.softwareModuleType().create()
-                .key("test123").name("TestName123").description("Desc123").colour("colour").maxAssignments(5));
-        testType = softwareModuleTypeManagement
-                .update(entityFactory.softwareModuleType().update(testType.getId()).description("Desc1234"));
-        return testType;
+        final SoftwareModuleType testType = softwareModuleTypeManagement.create(SoftwareModuleTypeManagement.Create.builder()
+                .key("test123").name("TestName123").description("Desc123").colour("colour").maxAssignments(5).build());
+        return softwareModuleTypeManagement
+                .update(SoftwareModuleTypeManagement.Update.builder().id(testType.getId()).description("Desc1234").build());
     }
 }
